# template_mdocx

./: .gitignore  LICENSE  README.md  RULES.md  build.py  pyproject.toml  server.py
common/: __init__.py  crossref.py  figures.py  formulas.py  parser.py  references.py  tables.py  utils.py
docs/: refs.bib  test_coverage.md
hust_thesis/: EXAMPLE.md  RULES.md  TITLE_RULES.md  __init__.py  formatters.py  generator.py  template.docx
skills/: SKILL.md
utils/: __init__.py  docx_to_md.py
